test/compile-fail/resolution/use/no-root/expected.txt
error: unresolved item `a`
 --> top.rhdl:1:4
  |
1 | use a;
  |     ^ no `a` item
